# Paul-Blart-Mall-Bot

./: README.md  commands.html  index.html  keep_alive.py  main.py  pyproject.toml
config/: fontlist-v330.json
variables/: balancesbackup.txt  blartcoindata.txt  blartcoingraphdata.txt  latestquote.txt  serverquotes.txt  serverslist.txt  userbalances.txt  userquotes.txt
