[tool.poetry]
name = "paul-blart-mall-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
emoji = "^1.2.0"
flask = "^1.1.2"
discord = "^1.0.1"
replit = "^2.0.0"
psutil = "^5.8.0"
guppy3 = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
